# haproxy-hacks

./: .gitignore  .gitmodules  0001-Allow-remote-debugging-via-delve-DO-NOT-MERGE-THIS-C.patch  README.md  curler  dns-lookup.yaml  dumpster-redux.org  go.mod  go.sum  haproxy-established-connections.sh  host-access-container.yaml  ts
BZ1690146/: 0001-Build-with-debug.patch  README.md  haproxy.cfg  reload-haproxy
BZ1743291/: .envrc  Makefile  README.md  accept.c  alloc.c  client-curl.bash  client.bash  client.go  client.js  client2.js  haproxy.cfg  malloc.c  reload-proxy  server.go  server.js
BZ1761935/: README.md  haproxy.cfg  reload-proxy
BZ1810573/: README.md  extract-binaries.sh  haproxy.cfg  reload-haproxy
BZ1829779/: Makefile  analyze-curler-results  cert_config.map  curl-timer  expose-services.sh  full-capture.sh  generate-lots-of-routes.sh  generate-pods.sh  generate-services.sh  go.mod  go.sum  gyrate-route.sh  haproxy.cfg  http-response-time  make-additional-backends.bash  make-additional-map-entries.bash  os_http_be.map  reload-haproxy  run-jobs  split  stress.yaml  test.sh  test.yaml  while-1-reload
BZ1829779/curler/: CMakeLists.txt  Dockerfile  GNUmakefile  Makefile  README.md  analyze-curler-results  curl-tracer  curler.c  installer  sluggish-gets  sqlite3
BZ1829779/curler/centos/: curler
BZ1829779/r-curler/: Cargo.toml
BZ1829779/r-curler/src/: main.rs
BZ1841454/: .gitignore  Makefile  README.md  analyze-failures  analyze-results  apply  curl-error-codes.txt  delete  go.mod  images-large.json  images-medium.json  images-small.json  reqecho.yaml  run  run-jobs  test.sh
(+810 files in other folders)
